# Horizon-Photo-Viewer

./: .gitignore  Horizon-snap.md  README.md  justfile  meson.build  meson.options
Docs/: Arch-Linux.md  Debian-Ubuntu.md  Fedora.md  Project-Map.md
assets/: com.horizon.photo-viewer.desktop
protocol/: meson.build  wlr-foreign-toplevel-management-unstable-v1.xml
src/: main.cpp  meson.build
src/cache/thumbnail/: thumb_cache.cpp  thumb_cache.hpp
src/common/config/: config.cpp  config.hpp
src/common/file_utils/: trash.cpp  trash.hpp
src/common/math/: math.hpp
src/core/: app.cpp  app.hpp  config.cpp  config.hpp  decode_pool.cpp  decode_pool.hpp  thumb_cache.cpp  thumb_cache.hpp  trash.cpp
src/core/screenshot/: clipboard.cpp  clipboard.hpp  color_info.cpp  color_info.hpp  dialog_base.hpp  file_chooser_dialog.hpp  foreign_toplevels.cpp  foreign_toplevels.hpp  icon_cache.cpp  icon_cache.hpp  logging.cpp  logging.hpp  memfd.cpp  memfd.hpp  shell_config.hpp  wlr_foreign_toplevels.cpp  wlr_foreign_toplevels.hpp
src/core/viewer/: app.cpp  app.hpp
src/dbus/: portal_file_dialog.cpp  portal_file_dialog.hpp
src/dbus/portal/: portal_file_dialog.cpp  portal_file_dialog.hpp
src/decode/: avif_decoder.cpp  color.cpp  decoder.cpp  decoder.hpp  exif.cpp  heif_decoder.cpp  jpeg_decoder.cpp  jxl_decoder.cpp  raw_decoder.cpp  svg_decoder.cpp  svg_render.hpp  webp_decoder.cpp  wuffs_decoder.cpp
src/decode/common/: color.cpp  exif.cpp  exif.hpp  svg_doc.cpp  svg_doc.hpp  svg_render.hpp
src/decode/core/: decoder.cpp  decoder.hpp  image_decoder.hpp  registry.cpp  registry.hpp  result.hpp
src/decode/formats/avif/: avif_decoder.cpp  decoder.hpp
src/decode/formats/heif/: decoder.hpp  heif_decoder.cpp
src/decode/formats/jpeg/: decoder.hpp  jpeg_decoder.cpp
src/decode/formats/jxl/: decoder.hpp  jxl_decoder.cpp
src/decode/formats/raw/: decoder.hpp  raw_decoder.cpp
src/decode/formats/svg/: decoder.hpp  svg_decoder.cpp
src/decode/formats/webp/: decoder.hpp  webp_decoder.cpp
src/decode/formats/wuffs/: decoder.hpp  wuffs_decoder.cpp
src/features/crop/: crop.cpp
src/features/drag_drop/: drag_drop.cpp
src/features/file_save/: save.cpp
src/features/markup/: markup.cpp
src/features/navigation/: navigation.cpp
src/features/prefetch/: prefetch.cpp
src/features/theme/: theme.cpp  theme.hpp
src/features/upload/: upload.cpp  upload.hpp
src/features/zoom/: zoom.cpp
src/render/: text_renderer.cpp  text_renderer.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_surface.cpp  vulkan_surface.hpp
src/render/text/: text_renderer.cpp
src/screenshot/: app.cpp  app.hpp  screencopy.cpp  screencopy.hpp  shm_buffer.cpp  shm_buffer.hpp  wayland_seat.cpp  wayland_seat.hpp
src/screenshot/capture/: capture.cpp  capture.hpp  drm_kms.cpp  drm_kms.hpp
src/screenshot/ui/: input.cpp  input.hpp  layout.cpp  layout.hpp  paint.cpp  paint.hpp
src/screenshot/ui/button/: button.cpp  button.hpp
src/thread/pool/: decode_pool.cpp  decode_pool.hpp
src/ui/: m3_widgets.hpp  overlay.cpp  overlay.hpp  thumbnail_strip.cpp  thumbnail_strip.hpp
src/ui/overlay/: crop_render.cpp  markup_render.cpp  menu.cpp  overlay.cpp  settings.cpp  sidebar.cpp  toolbar.cpp
src/ui/overlay/widgets/: slider.hpp  toggle.hpp
src/ui/thumbnail_strip/: thumbnail_strip.cpp
src/wayland/: connection.cpp  connection.hpp  seat.cpp  seat.hpp  shm_buffer.cpp  shm_buffer.hpp  surface_extensions.cpp  surface_extensions.hpp
src/wayland/buffer/: shm_buffer.cpp
src/wayland/core/: connection.cpp  connection.hpp  seat.cpp
src/wayland/surface/: surface_extensions.cpp  surface_extensions.hpp
test-images/: test.heic  test.jxl
